deploy/prod/rest/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherface-rest
spec:
  selector:
    app: etherface
    component: rest
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
