deploy/prod/rest/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: etherface-rest
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.etherface.rss3.io`)
      kind: Rule
      middlewares:
        - name: etherface-cors
      services:
        - name: etherface-rest
          port: 80
  tls:
    secretName: etherface-cert
